dl/layer.h

// --------------------------------------------------------------------------
// tensor data structure & some functions
// --------------------------------------------------------------------------

typedef float real;
typedef struct Tensor_
{
  char name[MAX_NAME_LEN];
  int num_items;
  int ndim;
  int shape[BATCH_SIZE][MAX_NDIM];
  int start[BATCH_SIZE];
  real* data;
  int data_type;
} Tensor;
// layer options
typedef struct LayerOption_
{
  int num_groups;
  int out_channels;
  int kernel_h, kernel_w;
  int pad_h, pad_w;
  int stride_h, stride_w;
  int bias;
  void* handle;

  int pooled_height;
  int pooled_width;
  real spatial_scale;
  int flatten;

  real negative_slope;

  real* scales;
  real* ratios;
  int num_scales;
  int num_ratios;
  int base_size;
  int feat_stride;
  int min_size;
  int pre_nms_topn;
  int post_nms_topn;
  real nms_thresh;
  real score_thresh;
  int bbox_vote;
  real vote_thresh;

  int scaled;
  int test;
  real threshold;

  real scale_weight;
  real scale_bias;

  int num_bottoms;

  int channel_axis;

  int reshape[MAX_NDIM];
  int reshape_ndim;
} LayerOption;
typedef struct Layer_
{
  char name[MAX_NAME_LEN];

  Tensor* p_bottoms[MAX_NUM_BOTTOMS];
  int num_bottoms;

  Tensor* p_tops[MAX_NUM_TOPS];
  int num_tops;

  Tensor* p_params[MAX_NUM_PARAMS];
  int num_params;

  void* aux_data;

  void (*f_forward)(void*, void*);
  void (*f_shape)(void*, void*);
  void (*f_free)(void*, void*);

  LayerOption option;
} Layer;
typedef struct Net_
{
  char param_path[1024];

  Tensor tensors[MAX_NUM_TENSORS];
  int num_tensors;

  Layer layers[MAX_NUM_LAYERS];
  int num_layers;

  real* p_shared_blocks[MAX_NUM_SHARED_BLOCKS];
  int num_shared_blocks;

  int num_output_boxes;

  real* temp_data;
  real* temp_cpu_data;
  long int temp_space;

  real* const_data;
  long int const_space;

  long int space_cpu;
  long int space;

  int initialized;

  int input_scale;

  #ifdef GPU
  cublasHandle_t blas_handle;
  #else
  int blas_handle;
  #endif
} Net;
Tensor* get_tensor_by_name(Net* const net, const char* const name);
Layer* get_layer_by_name(Net* const net, const char* const name);
Layer* add_scale_const_layer(Net* const net,
                             const char* const layer_name,
                             const char* const bottom_name,
                             const char* const top_name,
                             const real weight,
                             const real bias,
                             const int bias_term);
Layer* add_relu_layer(Net* const net,
                      const char* const layer_name,
                      const char* const bottom_name,
                      const char* const top_name,
                      const real negative_slope);
Layer* add_dropout_layer(Net* const net,
                         const char* const layer_name,
                         const char* const bottom_name,
                         const char* const top_name,
                         const real threshold,
                         const int is_test,
                         const int is_scaled);
Layer* add_proposal_layer(Net* const net,
                          const char* const layer_name,
                          const char* const score_name,
                          const char* const bbox_name,
                          const char* const img_info_name,
                          const char* const top_name,
                          real anchor_scales[], const int num_scales,
                          real anchor_ratios[], const int num_ratios,
                          const int feat_stride,
                          const int base_size, const int min_size,
                          const int pre_nms_topn, const int post_nms_topn,
                          const real nms_thresh,
                          const int bbox_vote, const real vote_thresh);
Layer* add_roipool_layer(Net* const net,
                         const char* const layer_name,
                         const char* const rcnn_input_name,
                         const char* const roi_name,
                         const char* const top_name,
                         const int pooled_h, const int pooled_w,
                         const real spatial_scale,
                         const int flatten);
Layer* add_odout_layer(Net* const net,
                       const char* const layer_name,
                       const char* const score_name,
                       const char* const bbox_name,
                       const char* const roi_name,
                       const char* const img_info_name,
                       const char* const top_name,
                       const int min_size, const int pre_nms_topn,
                       const real score_thresh, const real nms_thresh,
                       const int bbox_vote, const real vote_thresh);
int _batch_size_net(void);
int _max_ndim(void);
int _max_name_len(void);
int _max_num_bottoms(void);
int _max_num_tops(void);
int _max_num_params(void);
int _max_num_tensors(void);
int _max_num_layers(void);
int _max_num_shared_blocks(void);
Net* _net(void);
void _release_net(void);
void _detect_net(const unsigned char image_data[],
                 const int width, const int height);
Tensor* _layer_net(const int layer_id, const int top_id);